Added multiple features

--- a/api/library-api/src/main/resources/application.properties
+++ b/api/library-api/src/main/resources/application.properties
@@ -18,5 +18,8 @@ management.zipkin.tracing.endpoint=http://127.0.0.1:9411/api/ve/spans
 # traceID and spanId are predefined MDC keys - we want the logs to include them
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
-logging.level.root=debug
-logging.level.org.springframework.web=debug
+logging.level.root=info
+logging.level.org.springframework.web=info
+
+okta.oauth2.client-id=0oahbhnuni1Uig2cH5d7
+okta.oauth2.issuer=https://dev-07192946.okta.com/oauth2/default
